# polyglot-ai

./: .envrc  .gitignore  .pre-commit-config.yaml  AgentLoop  PlanExecutor  README.md  flake.nix  package-lock.json  pyproject.toml
.github/workflows/: ci.yml  release.yml  wiki-sync.yml
.playwright-mcp/: page-2026-04-11T09-15-31-695Z.yml
docs/: tasks-workflow.html
packaging/: INSTALL.md  build_appimage.sh  build_deb.sh  build_rpm.sh  generate_icons.sh
packaging/appimage/: AppRun  polyglot-ai.desktop
packaging/debian/: control  copyright  polyglot-ai.desktop  postinst  prerm
packaging/flatpak/: io.github.sabiut.polyglotai.metainfo.xml  io.github.sabiut.polyglotai.yml
packaging/rpm/: polyglot-ai.spec
src/polyglot_ai/: __init__.py  __main__.py  app.py  constants.py  migration.py
src/polyglot_ai/core/: action_registry.py  async_utils.py  audit.py  bridge.py  coverage.py  database.py  db_explorer.py  db_notebook.py  dependency_check.py  file_ops.py  file_safety.py  indexer.py  keyring_store.py  mcp_client.py  notifications.py  panel_state.py  plan_generator.py  project.py  sandbox.py  security.py  settings.py  task_health.py  task_manager.py  task_store.py  tasks.py  test_collector.py  update_check.py  workflow_engine.py
src/polyglot_ai/core/ai/: agent.py  anthropic_client.py  claude_oauth.py  client.py  code_applier.py  completion.py  context.py  google_client.py  models.py  openai_oauth.py  plan_executor.py  plan_models.py  plan_parser.py  provider.py  provider_manager.py  tool_streaming.py  xai_client.py
src/polyglot_ai/core/ai/tools/: __init__.py  arduino_tools.py  db_tools.py  definitions.py  docker_tools.py  file_tools.py  git_tools.py  k8s_tools.py  panel_tools.py  shell_tools.py
src/polyglot_ai/core/arduino/: __init__.py  boards.py  project.py  serial_monitor.py  service.py  starters.py
src/polyglot_ai/core/arduino/starters/blink-circuitpython/: code.py  meta.yml
src/polyglot_ai/core/arduino/starters/blink-cpp/: blink.ino  meta.yml
src/polyglot_ai/core/arduino/starters/blink-micropython/: main.py  meta.yml
src/polyglot_ai/core/arduino/starters/button-led-cpp/: button.ino  meta.yml
src/polyglot_ai/core/arduino/starters/hello-serial-cpp/: hello.ino  meta.yml
src/polyglot_ai/core/arduino/starters/rgb-rainbow-circuitpython/: code.py  (+1 more)
src/polyglot_ai/core/review/: __init__.py  diff_parser.py  iac_collectors.py  models.py  prompts.py  review_engine.py  snapshot.py
src/polyglot_ai/core/terminal/: emulator.py  pty_process.py
src/polyglot_ai/core/workflows/: arduino-cpp-build.yml  arduino-python-flash.yml  arduino-scaffold.yml  build-infra.yml  db-migration-check.yml  incident-response.yml  infra-health-check.yml  investigate-failure.yml  playwright-generator.yml  playwright-healer.yml  playwright-planner.yml  pre-deploy-check.yml  record-test-interactive.yml  record-test.yml  reproduce-bug.yml  resource-optimization.yml  security-audit.yml  verify-deploy.yml
src/polyglot_ai/resources/styles/: dark.qss  light.qss
src/polyglot_ai/startup/: __init__.py  notifications_setup.py  platform.py  preflight.py  services.py  single_instance.py  ui_wiring.py
src/polyglot_ai/ui/: bridge_qt.py  main_window.py  theme.py  theme_colors.py
src/polyglot_ai/ui/dialogs/: about_dialog.py  approval_dialog.py  arduino_change_dialog.py  block_task_dialog.py  dependency_dialog.py  github_connect_dialog.py  mcp_config_dialog.py  onboarding_dialog.py  pr_summary_dialog.py  settings_dialog.py  task_detail_dialog.py
src/polyglot_ai/ui/lexers/: __init__.py  log_lexer.py
src/polyglot_ai/ui/panels/: arduino_panel.py  changeset_panel.py  chat_attachments.py  chat_commands.py  chat_conversation_list.py  chat_icons.py  chat_input.py  chat_message.py  chat_model_caps.py  chat_panel.py  chat_workflows.py  cicd_panel.py  claude_web_panel.py  database_dialogs.py  database_panel.py  diff_viewer.py  docker_panel.py  document_tab.py  editor_panel.py  editor_tab.py  file_explorer.py  git_dialogs.py  git_icons.py  git_panel.py  inline_approval_card.py  k8s_panel.py  mcp_sidebar.py  nav_icons.py  plan_panel.py  preview_tab.py  review_panel.py  search_panel.py  shared_icons.py  tasks_panel.py  terminal_panel.py  test_panel.py  today_panel.py  usage_panel.py  video_panel.py  web_tests_view.py
src/polyglot_ai/ui/widgets/: __init__.py  activity_bar.py  command_palette.py  icon_button.py  plan_step_card.py  result_chart.py  result_profile.py  styled_combo.py  toast.py  video_preview.py
tests/: conftest.py
tests/core/: test_agent.py  test_anthropic_client.py  test_app_startup_helpers.py  test_arduino_auto_ask.py  test_arduino_boards.py  test_arduino_chat_context.py  test_arduino_dialout.py  test_arduino_project.py  test_arduino_service.py  test_arduino_service_loop.py  test_arduino_starters.py  test_arduino_tools.py  test_bridge.py  test_claude_oauth.py  test_context_builder.py  test_coverage.py  test_database.py  test_db_readonly.py  test_dependency_check.py  test_file_ops.py  test_file_safety.py  test_file_tools.py  test_fork_conversation.py  test_frontend_review.py  test_google_client.py  test_install_progress.py  test_mcp_client.py  test_models.py  test_notifications.py  test_openai_client.py  test_openai_oauth.py  test_panel_state.py  test_panel_tools.py  test_plan_executor.py  test_plan_generator.py  test_provider_manager.py  test_review_snapshot.py  test_run_blocking.py  test_sandbox.py  test_security.py  (+14 more)
tests/packaging/: test_install_contract.py
tests/ui/: conftest.py  test_arduino_change_dialog.py  test_arduino_stylesheets.py  test_chat_bootstrap_button.py  test_chat_cancel_persistence.py  test_chat_history_toggle.py  test_chat_message_reasoning.py  test_cicd_panel.py  test_editor_lexer_map.py  test_task_detail_dialog.py  test_tasks_panel.py  test_theme_tokens.py  test_video_panel.py  test_video_preview.py  test_web_tests_view.py
wiki/: CI-Docker-Kubernetes.md  Chat.md  Database.md  Editor-Terminal-Files.md  Getting-Started.md  Git-and-PR.md  Home.md  MCP-Servers.md  README.md  Settings-and-Shortcuts.md  Tasks-and-Today.md  Tests-and-Review.md  Troubleshooting-FAQ.md
(+4 files in other folders)
