[project]
name = "polyglot-ai"
version = "0.7.0"
description = "AI-powered coding assistant desktop app for Linux — supports OpenAI, Anthropic, Google, xAI, and more"
requires-python = ">=3.11"
license = {text = "LGPL-3.0-or-later"}
authors = [{name = "Polyglot AI Contributors"}]
keywords = ["ai", "coding", "assistant", "ide", "openai", "anthropic", "gemini", "multi-provider"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
]
dependencies = [
    "PyQt6>=6.6",
    "PyQt6-Charts>=6.6",
    "PyQt6-QScintilla>=2.14",
    "openai>=1.30",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
    "pyte>=0.8",
    "keyring>=25.0",
    "aiosqlite>=0.19",
    "asyncpg>=0.30",
    "aiomysql>=0.2",
    "qasync>=0.27",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
polyglot-ai = "polyglot_ai.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polyglot_ai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
