[project]
name = "polyglot-ai"
version = "0.12.12"
description = "AI-powered coding assistant desktop app for Linux — supports OpenAI, Anthropic, Google, DeepSeek, and more"
requires-python = ">=3.11"
license = {text = "LGPL-3.0-or-later"}
authors = [{name = "Polyglot AI Contributors"}]
keywords = ["ai", "coding", "assistant", "ide", "openai", "anthropic", "gemini", "multi-provider"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
]
dependencies = [
    "PyQt6>=6.6",
    "PyQt6-Charts>=6.6",
    "PyQt6-QScintilla>=2.14",
    "openai>=1.30",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
    "pyte>=0.8",
    "keyring>=25.0",
    "aiosqlite>=0.19",
    "asyncpg>=0.30",
    "aiomysql>=0.2",
    "qasync>=0.27",
    "PyYAML>=6.0",
    # USB serial-port enumeration for the Arduino panel's board
    # detection. Pure-Python wheel (no native build), so adding it
    # here costs nothing on install. Without it the panel can only
    # see boards arduino-cli identifies — Pi Pico, CH340 clones,
    # generic ESP boards in bootloader mode are missed.
    "pyserial>=3.5",
    # MicroPython upload tool. Pure-Python (~5 MB), used by the
    # Arduino panel's MicroPython upload path and the
    # arduino-python-flash workflow. Shipping it as a hard dep means
    # the panel's Upload button works on a fresh install without
    # the user needing to chase down a separate ``pip install
    # --user mpremote`` step. The first-run dependency dialog still
    # flags it if the wheel somehow isn't installed (stale venv,
    # broken packaging) — see core/dependency_check.py.
    "mpremote>=1.20",
    # MCP Python SDK — used by ``core/mcp_client.py`` to drive every
    # configured MCP server (playwright, memory, fetch, sequential-
    # thinking, git, …). Without it, the client logs
    # ``MCP SDK not installed. Run: pip install mcp`` once per
    # server and every server fails to connect — the user gets a
    # working app but no MCP tools at all. Hard dep so a fresh
    # ``pip install -e .`` brings everything in one step.
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.4",
    # Pinned exact — ``ruff format`` output drifts slightly between
    # minor releases, and an unpinned constraint means CI silently
    # picks up the newest one on every run while developer venvs
    # stay on whatever was installed last. The result: a green
    # local ``ruff format --check`` followed by a red CI build.
    # Bump this pin deliberately when adopting a new ruff version.
    "ruff==0.15.12",
]

[project.scripts]
polyglot-ai = "polyglot_ai.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polyglot_ai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
